--- a/index.html
+++ b/index.html
@@ -144,53 +144,53 @@
                 </thead>
                 <tbody>
                     <tr>
-                        <td class="points-cell emp-cell" id="emp-cell-10">10 <i class="cube cube-DY fa fa-coins smallCube"></i> <i class="cube cube-DY fa fa-coins smallCube"></i></td>
+                        <td class="points-cell emp-cell" id="emp-cell-10">10 <i class="cube cube-DY fa fa-coins smallCube float-right"></i> <i class="cube cube-DY fa fa-coins smallCube float-right"></i></td>
                         <td class="points-cell pub-cell " id="pub-cell-10">10</td>
                         <td class="points-cell wea-cell" id="wea-cell-10">10</td>
                         <td class="points-cell hea-cell" id="hea-cell-10">10</td>
                         <td class="points-cell pop-cell" id="pop-cell-10">10</td>
                     </tr>
                     <tr>
-                        <td class="points-cell emp-cell" id="emp-cell-9"><i class="cube cube-DY fa fa-coins smallCube"></i> <i class="cube cube-DY fa fa-coins smallCube"></i></td>
-                        <td class="points-cell pub-cell" id="pub-cell-9"></td>
-                        <td class="points-cell wea-cell" id="wea-cell-9"></td>
-                        <td class="points-cell hea-cell" id="hea-cell-9"></td>
-                        <td class="points-cell pop-cell" id="pop-cell-9"></td>
+                        <td class="points-cell emp-cell" id="emp-cell-9">9<i class="cube cube-DY fa fa-coins smallCube float-right"></i> <i class="cube cube-DY fa fa-coins smallCube float-right"></i></td>
+                        <td class="points-cell pub-cell" id="pub-cell-9">9</td>
+                        <td class="points-cell wea-cell" id="wea-cell-9">9</td>
+                        <td class="points-cell hea-cell" id="hea-cell-9">9</td>
+                        <td class="points-cell pop-cell" id="pop-cell-9">9</td>
                     </tr>
                     <tr>
-                        <td class="points-cell emp-cell" id="emp-cell-8"><i class="cube cube-DY fa fa-coins smallCube"></i></td>
-                        <td class="points-cell pub-cell" id="pub-cell-8"></td>
-                        <td class="points-cell wea-cell" id="wea-cell-8"></td>
-                        <td class="points-cell hea-cell" id="hea-cell-8"></td>
-                        <td class="points-cell pop-cell" id="pop-cell-8"></td>
+                        <td class="points-cell emp-cell" id="emp-cell-8">8<i class="cube cube-DY fa fa-coins smallCube float-right"></i></td>
+                        <td class="points-cell pub-cell" id="pub-cell-8">8</td>
+                        <td class="points-cell wea-cell" id="wea-cell-8">8</td>
+                        <td class="points-cell hea-cell" id="hea-cell-8">8</td>
+                        <td class="points-cell pop-cell" id="pop-cell-8">8</td>
                     </tr>
                     <tr>
-                        <td class="points-cell emp-cell" id="emp-cell-7">7 <i class="cube cube-DY fa fa-coins smallCube"></i></td>
+                        <td class="points-cell emp-cell" id="emp-cell-7">7 <i class="cube cube-DY fa fa-coins smallCube float-right"></i></td>
                         <td class="points-cell pub-cell" id="pub-cell-7">7 </td>
                         <td class="points-cell wea-cell" id="wea-cell-7">7 </td>
                         <td class="points-cell hea-cell" id="hea-cell-7">7 </td>
                         <td class="points-cell pop-cell" id="pop-cell-7">7 </td>
                     </tr>
                     <tr>
-                        <td class="points-cell emp-cell" id="emp-cell-6"><i class="cube cube-DY fa fa-coins smallCube"></i></td>
-                        <td class="points-cell pub-cell" id="pub-cell-6"></td>
-                        <td class="points-cell wea-cell" id="wea-cell-6"></td>
-                        <td class="points-cell hea-cell" id="hea-cell-6"></td>
-                        <td class="points-cell pop-cell" id="pop-cell-6"></td>
+                        <td class="points-cell emp-cell" id="emp-cell-6">6<i class="cube cube-DY fa fa-coins smallCube float-right"></i></td>
+                        <td class="points-cell pub-cell" id="pub-cell-6">6</td>
+                        <td class="points-cell wea-cell" id="wea-cell-6">6</td>
+                        <td class="points-cell hea-cell" id="hea-cell-6">6</td>
+                        <td class="points-cell pop-cell" id="pop-cell-6">6</td>
                     </tr>
                     <tr>
-                        <td class="points-cell emp-cell" id="emp-cell-5">5 <i class="cube cube-DY fa fa-coins smallCube"></i></td>
+                        <td class="points-cell emp-cell" id="emp-cell-5">5 <i class="cube cube-DY fa fa-coins smallCube float-right"></i></td>
                         <td class="points-cell pub-cell" id="pub-cell-5">5 </td>
                         <td class="points-cell wea-cell" id="wea-cell-5">5 </td>
                         <td class="points-cell hea-cell" id="hea-cell-5">5 </td>
                         <td class="points-cell pop-cell" id="pop-cell-5">5 </td>
                     </tr>
                     <tr>
-                        <td class="points-cell emp-cell" id="emp-cell-4">&nbsp;</td>
-                        <td class="points-cell pub-cell" id="pub-cell-4"></td>
-                        <td class="points-cell wea-cell" id="wea-cell-4"></td>
-                        <td class="points-cell hea-cell" id="hea-cell-4"></td>
-                        <td class="points-cell pop-cell" id="pop-cell-4"></td>
+                        <td class="points-cell emp-cell" id="emp-cell-4">4</td>
+                        <td class="points-cell pub-cell" id="pub-cell-4">4</td>
+                        <td class="points-cell wea-cell" id="wea-cell-4">4</td>
+                        <td class="points-cell hea-cell" id="hea-cell-4">4</td>
+                        <td class="points-cell pop-cell" id="pop-cell-4">4</td>
                     </tr>
                     <tr>
                         <td class="points-cell emp-cell" id="emp-cell-3">3 </td>
@@ -200,11 +200,11 @@
                         <td class="points-cell pop-cell" id="pop-cell-3">3 </td>
                     </tr>
                     <tr>
-                        <td class="points-cell emp-cell" id="emp-cell-2">&nbsp;</td>
-                        <td class="points-cell pub-cell" id="pub-cell-2"></td>
-                        <td class="points-cell wea-cell" id="wea-cell-2"></td>
-                        <td class="points-cell hea-cell" id="hea-cell-2"></td>
-                        <td class="points-cell pop-cell" id="pop-cell-2"></td>
+                        <td class="points-cell emp-cell" id="emp-cell-2">2</td>
+                        <td class="points-cell pub-cell" id="pub-cell-2">2</td>
+                        <td class="points-cell wea-cell" id="wea-cell-2">2</td>
+                        <td class="points-cell hea-cell" id="hea-cell-2">2</td>
+                        <td class="points-cell pop-cell" id="pop-cell-2">2</td>
                     </tr>
                     <tr>
                         <td class="points-cell emp-cell" id="emp-cell-1">1 </td>
@@ -214,11 +214,11 @@
                         <td class="points-cell pop-cell" id="pop-cell-1">1 </td>
                     </tr>
                     <tr>
-                        <td class="points-cell emp-cell" id="emp-cell-0">&nbsp;</td>
-                        <td class="points-cell pub-cell" id="pub-cell-0"></td>
-                        <td class="points-cell wea-cell" id="wea-cell-0"></td>
-                        <td class="points-cell hea-cell" id="hea-cell-0"></td>
-                        <td class="points-cell pop-cell" id="pop-cell-0"></td>
+                        <td class="points-cell emp-cell" id="emp-cell-0">0</td>
+                        <td class="points-cell pub-cell" id="pub-cell-0">0</td>
+                        <td class="points-cell wea-cell" id="wea-cell-0">0</td>
+                        <td class="points-cell hea-cell" id="hea-cell-0">0</td>
+                        <td class="points-cell pop-cell" id="pop-cell-0">0</td>
                     </tr>
                 </tbody>
             </table>
@@ -228,7 +228,7 @@
 
     <div id="commands">
         <button type="button" onClick="newTurn()" id="newTurn-btn" class="btn btn-success">New turn</button>
-        <button type="button" onClick="endTurn()" id="endTurn-btn" class="btn btn-warning">End turn</button>
+        <button type="button" onClick="endTurn()" id="endTurn-btn" class="btn btn-warning d-none">End turn</button>
         <button type="button" onClick="newYear()" id="newYear-btn" class="btn btn-danger">New year</button>
     </div>
 
