add action buttons

--- a/index.html
+++ b/index.html
@@ -132,96 +132,113 @@
         </div>
         
         <div class="col-xs-12 col-md-6">
-            <table class="table table-hover ">
-                <thead>
-                    <tr>
-                        <th class="emp-cell">Employment</th>
-                        <th class="pub-cell">Public Safety</th>
-                        <th class="wea-cell">Wealth</th>
-                        <th class="hea-cell">Health</th>
-                        <th class="pop-cell">Popularity</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td class="points-cell emp-cell" id="emp-cell-10">10 <i class="cube cube-DY fa fa-coins smallCube float-right"></i> <i class="cube cube-DY fa fa-coins smallCube float-right"></i></td>
-                        <td class="points-cell pub-cell " id="pub-cell-10">10</td>
-                        <td class="points-cell wea-cell" id="wea-cell-10">10</td>
-                        <td class="points-cell hea-cell" id="hea-cell-10">10</td>
-                        <td class="points-cell pop-cell" id="pop-cell-10">10</td>
-                    </tr>
-                    <tr>
-                        <td class="points-cell emp-cell" id="emp-cell-9">9<i class="cube cube-DY fa fa-coins smallCube float-right"></i> <i class="cube cube-DY fa fa-coins smallCube float-right"></i></td>
-                        <td class="points-cell pub-cell" id="pub-cell-9">9</td>
-                        <td class="points-cell wea-cell" id="wea-cell-9">9</td>
-                        <td class="points-cell hea-cell" id="hea-cell-9">9</td>
-                        <td class="points-cell pop-cell" id="pop-cell-9">9</td>
-                    </tr>
-                    <tr>
-                        <td class="points-cell emp-cell" id="emp-cell-8">8<i class="cube cube-DY fa fa-coins smallCube float-right"></i></td>
-                        <td class="points-cell pub-cell" id="pub-cell-8">8</td>
-                        <td class="points-cell wea-cell" id="wea-cell-8">8</td>
-                        <td class="points-cell hea-cell" id="hea-cell-8">8</td>
-                        <td class="points-cell pop-cell" id="pop-cell-8">8</td>
-                    </tr>
-                    <tr>
-                        <td class="points-cell emp-cell" id="emp-cell-7">7 <i class="cube cube-DY fa fa-coins smallCube float-right"></i></td>
-                        <td class="points-cell pub-cell" id="pub-cell-7">7 </td>
-                        <td class="points-cell wea-cell" id="wea-cell-7">7 </td>
-                        <td class="points-cell hea-cell" id="hea-cell-7">7 </td>
-                        <td class="points-cell pop-cell" id="pop-cell-7">7 </td>
-                    </tr>
-                    <tr>
-                        <td class="points-cell emp-cell" id="emp-cell-6">6<i class="cube cube-DY fa fa-coins smallCube float-right"></i></td>
-                        <td class="points-cell pub-cell" id="pub-cell-6">6</td>
-                        <td class="points-cell wea-cell" id="wea-cell-6">6</td>
-                        <td class="points-cell hea-cell" id="hea-cell-6">6</td>
-                        <td class="points-cell pop-cell" id="pop-cell-6">6</td>
-                    </tr>
-                    <tr>
-                        <td class="points-cell emp-cell" id="emp-cell-5">5 <i class="cube cube-DY fa fa-coins smallCube float-right"></i></td>
-                        <td class="points-cell pub-cell" id="pub-cell-5">5 </td>
-                        <td class="points-cell wea-cell" id="wea-cell-5">5 </td>
-                        <td class="points-cell hea-cell" id="hea-cell-5">5 </td>
-                        <td class="points-cell pop-cell" id="pop-cell-5">5 </td>
-                    </tr>
-                    <tr>
-                        <td class="points-cell emp-cell" id="emp-cell-4">4</td>
-                        <td class="points-cell pub-cell" id="pub-cell-4">4</td>
-                        <td class="points-cell wea-cell" id="wea-cell-4">4</td>
-                        <td class="points-cell hea-cell" id="hea-cell-4">4</td>
-                        <td class="points-cell pop-cell" id="pop-cell-4">4</td>
-                    </tr>
-                    <tr>
-                        <td class="points-cell emp-cell" id="emp-cell-3">3 </td>
-                        <td class="points-cell pub-cell" id="pub-cell-3">3 </td>
-                        <td class="points-cell wea-cell" id="wea-cell-3">3 </td>
-                        <td class="points-cell hea-cell" id="hea-cell-3">3 </td>
-                        <td class="points-cell pop-cell" id="pop-cell-3">3 </td>
-                    </tr>
-                    <tr>
-                        <td class="points-cell emp-cell" id="emp-cell-2">2</td>
-                        <td class="points-cell pub-cell" id="pub-cell-2">2</td>
-                        <td class="points-cell wea-cell" id="wea-cell-2">2</td>
-                        <td class="points-cell hea-cell" id="hea-cell-2">2</td>
-                        <td class="points-cell pop-cell" id="pop-cell-2">2</td>
-                    </tr>
-                    <tr>
-                        <td class="points-cell emp-cell" id="emp-cell-1">1 </td>
-                        <td class="points-cell pub-cell" id="pub-cell-1">1 </td>
-                        <td class="points-cell wea-cell" id="wea-cell-1">1 </td>
-                        <td class="points-cell hea-cell" id="hea-cell-1">1 </td>
-                        <td class="points-cell pop-cell" id="pop-cell-1">1 </td>
-                    </tr>
-                    <tr>
-                        <td class="points-cell emp-cell" id="emp-cell-0">0</td>
-                        <td class="points-cell pub-cell" id="pub-cell-0">0</td>
-                        <td class="points-cell wea-cell" id="wea-cell-0">0</td>
-                        <td class="points-cell hea-cell" id="hea-cell-0">0</td>
-                        <td class="points-cell pop-cell" id="pop-cell-0">0</td>
-                    </tr>
-                </tbody>
-            </table>
+
+            <div class=row>
+                <div class="btn-group col-4" role="group">
+                    <button type="button" onClick="alert('todo');" id="bm-action-btn" class="btn btn-info col-12">Borrow Money</button>
+                </div>
+                <div class="btn-group col-4" role="group">
+                    <button type="button" onClick="alert('todo');" id="rt-action-btn" class="btn btn-info col-12">Raise Taxes</button>
+                </div>
+                <div class="btn-group col-4" role="group">
+                    <button type="button" onClick="alert('todo');" id="pl-action-btn" class="btn btn-info col-12">Pay Loans</button>
+                </div>
+                
+
+
+
+                <table class="table table-hover mt-4">
+                    <thead>
+                        <tr>
+                            <th class="emp-cell">Employment</th>
+                            <th class="pub-cell">Public Safety</th>
+                            <th class="wea-cell">Wealth</th>
+                            <th class="hea-cell">Health</th>
+                            <th class="pop-cell">Popularity</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td class="points-cell emp-cell" id="emp-cell-10">10 <i class="cube cube-DY fa fa-coins smallCube float-right"></i> <i class="cube cube-DY fa fa-coins smallCube float-right"></i></td>
+                            <td class="points-cell pub-cell " id="pub-cell-10">10</td>
+                            <td class="points-cell wea-cell" id="wea-cell-10">10</td>
+                            <td class="points-cell hea-cell" id="hea-cell-10">10</td>
+                            <td class="points-cell pop-cell" id="pop-cell-10">10</td>
+                        </tr>
+                        <tr>
+                            <td class="points-cell emp-cell" id="emp-cell-9">9<i class="cube cube-DY fa fa-coins smallCube float-right"></i> <i class="cube cube-DY fa fa-coins smallCube float-right"></i></td>
+                            <td class="points-cell pub-cell" id="pub-cell-9">9</td>
+                            <td class="points-cell wea-cell" id="wea-cell-9">9</td>
+                            <td class="points-cell hea-cell" id="hea-cell-9">9</td>
+                            <td class="points-cell pop-cell" id="pop-cell-9">9</td>
+                        </tr>
+                        <tr>
+                            <td class="points-cell emp-cell" id="emp-cell-8">8<i class="cube cube-DY fa fa-coins smallCube float-right"></i></td>
+                            <td class="points-cell pub-cell" id="pub-cell-8">8</td>
+                            <td class="points-cell wea-cell" id="wea-cell-8">8</td>
+                            <td class="points-cell hea-cell" id="hea-cell-8">8</td>
+                            <td class="points-cell pop-cell" id="pop-cell-8">8</td>
+                        </tr>
+                        <tr>
+                            <td class="points-cell emp-cell" id="emp-cell-7">7 <i class="cube cube-DY fa fa-coins smallCube float-right"></i></td>
+                            <td class="points-cell pub-cell" id="pub-cell-7">7 </td>
+                            <td class="points-cell wea-cell" id="wea-cell-7">7 </td>
+                            <td class="points-cell hea-cell" id="hea-cell-7">7 </td>
+                            <td class="points-cell pop-cell" id="pop-cell-7">7 </td>
+                        </tr>
+                        <tr>
+                            <td class="points-cell emp-cell" id="emp-cell-6">6<i class="cube cube-DY fa fa-coins smallCube float-right"></i></td>
+                            <td class="points-cell pub-cell" id="pub-cell-6">6</td>
+                            <td class="points-cell wea-cell" id="wea-cell-6">6</td>
+                            <td class="points-cell hea-cell" id="hea-cell-6">6</td>
+                            <td class="points-cell pop-cell" id="pop-cell-6">6</td>
+                        </tr>
+                        <tr>
+                            <td class="points-cell emp-cell" id="emp-cell-5">5 <i class="cube cube-DY fa fa-coins smallCube float-right"></i></td>
+                            <td class="points-cell pub-cell" id="pub-cell-5">5 </td>
+                            <td class="points-cell wea-cell" id="wea-cell-5">5 </td>
+                            <td class="points-cell hea-cell" id="hea-cell-5">5 </td>
+                            <td class="points-cell pop-cell" id="pop-cell-5">5 </td>
+                        </tr>
+                        <tr>
+                            <td class="points-cell emp-cell" id="emp-cell-4">4</td>
+                            <td class="points-cell pub-cell" id="pub-cell-4">4</td>
+                            <td class="points-cell wea-cell" id="wea-cell-4">4</td>
+                            <td class="points-cell hea-cell" id="hea-cell-4">4</td>
+                            <td class="points-cell pop-cell" id="pop-cell-4">4</td>
+                        </tr>
+                        <tr>
+                            <td class="points-cell emp-cell" id="emp-cell-3">3 </td>
+                            <td class="points-cell pub-cell" id="pub-cell-3">3 </td>
+                            <td class="points-cell wea-cell" id="wea-cell-3">3 </td>
+                            <td class="points-cell hea-cell" id="hea-cell-3">3 </td>
+                            <td class="points-cell pop-cell" id="pop-cell-3">3 </td>
+                        </tr>
+                        <tr>
+                            <td class="points-cell emp-cell" id="emp-cell-2">2</td>
+                            <td class="points-cell pub-cell" id="pub-cell-2">2</td>
+                            <td class="points-cell wea-cell" id="wea-cell-2">2</td>
+                            <td class="points-cell hea-cell" id="hea-cell-2">2</td>
+                            <td class="points-cell pop-cell" id="pop-cell-2">2</td>
+                        </tr>
+                        <tr>
+                            <td class="points-cell emp-cell" id="emp-cell-1">1 </td>
+                            <td class="points-cell pub-cell" id="pub-cell-1">1 </td>
+                            <td class="points-cell wea-cell" id="wea-cell-1">1 </td>
+                            <td class="points-cell hea-cell" id="hea-cell-1">1 </td>
+                            <td class="points-cell pop-cell" id="pop-cell-1">1 </td>
+                        </tr>
+                        <tr>
+                            <td class="points-cell emp-cell" id="emp-cell-0">0</td>
+                            <td class="points-cell pub-cell" id="pub-cell-0">0</td>
+                            <td class="points-cell wea-cell" id="wea-cell-0">0</td>
+                            <td class="points-cell hea-cell" id="hea-cell-0">0</td>
+                            <td class="points-cell pop-cell" id="pop-cell-0">0</td>
+                        </tr>
+                    </tbody>
+                </table>
+
+            </div>
         </div>
         </div>
     </div>
